@@ -50,6 +50,7 @@
 #define ERROR_OCCURRED 0
 #define NO_ERROR_OCCURRED 1
 #define ERROR_OCCURRED_DISCONNECT 2
+#define TIMEOUT_GETTING_ERROR_STATUS 3
 
 #define DONT_RECONNECT 0
 #define RECONNECT 1
